@@ -138,28 +138,38 @@ install-locales:
 			$(inst_localedir)/$$locale; \
 	done < SUPPORTED
 
+tst_iswalnum-ENV = LOCPATH=$(common-objpfx)/localedata
+tst_iswalpha-ENV = LOCPATH=$(common-objpfx)/localedata
 tst_iswcntrl-ENV = LOCPATH=$(common-objpfx)/localedata
 tst_iswctype-ENV = LOCPATH=$(common-objpfx)/localedata
 tst_iswdigit-ENV = LOCPATH=$(common-objpfx)/localedata
 tst_iswgraph-ENV = LOCPATH=$(common-objpfx)/localedata
 tst_iswlower-ENV = LOCPATH=$(common-objpfx)/localedata
+tst_iswprint-ENV = LOCPATH=$(common-objpfx)/localedata
+tst_iswpunct-ENV = LOCPATH=$(common-objpfx)/localedata
 tst_iswspace-ENV = LOCPATH=$(common-objpfx)/localedata
 tst_iswupper-ENV = LOCPATH=$(common-objpfx)/localedata
 tst_iswxdigit-ENV = LOCPATH=$(common-objpfx)/localedata
 tst_swscanf-ENV = LOCPATH=$(common-objpfx)/localedata
+tst_towctrans-ENV = LOCPATH=$(common-objpfx)/localedata
 tst_towlower-ENV = LOCPATH=$(common-objpfx)/localedata
-tst_towupper-ENV = LOCPATH=$(common-objpfx)/localedata 
+tst_towupper-ENV = LOCPATH=$(common-objpfx)/localedata
 tst_wcscat-ENV = LOCPATH=$(common-objpfx)/localedata
-tst_wcscmp-ENV = LOCPATH=$(common-objpfx)/localedata 
+tst_wcschr-ENV = LOCPATH=$(common-objpfx)/localedata
+tst_wcscmp-ENV = LOCPATH=$(common-objpfx)/localedata
 tst_wcscoll-ENV = LOCPATH=$(common-objpfx)/localedata
 tst_wcscpy-ENV = LOCPATH=$(common-objpfx)/localedata
 tst_wcscspn-ENV = LOCPATH=$(common-objpfx)/localedata
 tst_wcslen-ENV = LOCPATH=$(common-objpfx)/localedata
-tst_wcsncat-ENV = LOCPATH=$(common-objpfx)/localedata 
+tst_wcsncat-ENV = LOCPATH=$(common-objpfx)/localedata
+tst_wcsncmp-ENV = LOCPATH=$(common-objpfx)/localedata
 tst_wcsncpy-ENV = LOCPATH=$(common-objpfx)/localedata
+tst_wcspbrk-ENV = LOCPATH=$(common-objpfx)/localedata
 tst_wcsspn-ENV = LOCPATH=$(common-objpfx)/localedata
 tst_wcsstr-ENV = LOCPATH=$(common-objpfx)/localedata
 tst_wcswidth-ENV = LOCPATH=$(common-objpfx)/localedata
 tst_wcsxfrm-ENV = LOCPATH=$(common-objpfx)/localedata
 tst_wctob-ENV = LOCPATH=$(common-objpfx)/localedata
+tst_wctrans-ENV = LOCPATH=$(common-objpfx)/localedata
+tst_wctype-ENV = LOCPATH=$(common-objpfx)/localedata
 tst_wcwidth-ENV = LOCPATH=$(common-objpfx)/localedata
